services/backdoor/overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backdoor-route
  labels:
    app: backdoor
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  hostnames:
    - prod.cloudgrep.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-backdoor
          port: 80
